// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`function local 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"locals\\": {
    \\"instance_ids\\": \\"\${concat(aws_instance.blue.*.id, aws_instance.green.*.id)}\\"
  }
}"
`;

exports[`local reference 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"locals\\": {
    \\"resource_name\\": \\"my_resource\\"
  },
  \\"resource\\": {
    \\"test_resource\\": {
      \\"test-resource\\": {
        \\"name\\": \\"\${local.resource_name}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-resource\\",
            \\"uniqueId\\": \\"test-resource\\"
          }
        }
      }
    }
  }
}"
`;

exports[`multiple locals 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"locals\\": {
    \\"local1\\": \\"1\\",
    \\"local2\\": \\"2\\"
  }
}"
`;

exports[`object local 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"locals\\": {
    \\"common_tags\\": {
      \\"Service\\": \\"service_name\\",
      \\"Owner\\": \\"owner\\"
    }
  }
}"
`;

exports[`string local 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"locals\\": {
    \\"greeting\\": \\"Hello, \${var.name}\\"
  }
}"
`;
